<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/labels_horizontal_padding"
        android:paddingVertical="@dimen/labels_vertical_padding"
        android:text="@string/passwordAndConfirmationDialogMessage"
        android:textSize="@dimen/password_and_confirmation_title_text_view_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/labels_horizontal_padding"
        android:paddingVertical="@dimen/labels_vertical_padding"
        android:text="@string/passwordLabel"
        android:textSize="@dimen/password_and_confirmation_text_view_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

    <TextView
        android:id="@+id/confirmationLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/labels_horizontal_padding"
        android:paddingVertical="@dimen/labels_vertical_padding"
        android:text="@string/confirmationLabel"
        android:textSize="@dimen/password_and_confirmation_text_view_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabelText" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/horizontalBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="passwordLabelText, confirmationLabelText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/passwordEditTextHint"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/labels_horizontal_padding"
        android:textSize="@dimen/password_and_confirmation_edit_text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordLabelText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/horizontalBarrier" />

    <EditText
        android:id="@+id/confirmationEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmationEditTextHint"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/labels_horizontal_padding"
        android:textSize="@dimen/password_and_confirmation_edit_text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/confirmationLabelText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/horizontalBarrier" />
</androidx.constraintlayout.widget.ConstraintLayout>